--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="verde_200">#83CD86</color>
+    <color name="verde_500">#1A4E1A</color>
+    <color name="verde_700">#2D4E2E</color>
+    <color name="teal_200">#00A192</color>
+    <color name="teal_700">#004343</color>
+    <color name="black">#0D1900</color>
+    <color name="white">#D0E4AE</color>
 </resources>
