--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/TitleTXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="64sp"
+        android:layout_marginTop="209dp"
+        android:layout_marginBottom="36dp"
         android:text="IMC"
-        android:textColor="@color/verde_700"
-        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="50sp" />
+        android:textColor="@color/verde_700"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/PesoEDT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/PesoEDT"
-        android:layout_marginTop="36sp"
-        android:layout_marginHorizontal="64sp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginBottom="36dp"
+        android:hint="@string/peso_ex_70_5"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
         android:textColor="@color/verde_700"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:inputType="numberDecimal"
-        android:hint="@string/peso_ex_70_5" />
+        app:layout_constraintBottom_toTopOf="@+id/AlturaEDT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TitleTXT" />
 
     <EditText
         android:id="@+id/AlturaEDT"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_marginHorizontal="64sp"
-        android:layout_marginTop="36sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginBottom="36dp"
         android:hint="@string/altura_ex_1_75"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="@color/verde_700"
-        android:inputType="numberDecimal"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/calcularBTN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PesoEDT" />
 
     <Button
         android:id="@+id/calcularBTN"
-        android:layout_marginTop="36sp"
-        android:layout_marginHorizontal="64sp"
-        android:layout_width="240sp"
-        android:layout_height="50sp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="209dp"
+        android:text="Calcular "
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:text="Calcular " />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AlturaEDT" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
