--- a/app/src/main/res/layout/main_relative.xml
+++ b/app/src/main/res/layout/main_relative.xml
@@ -1,61 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/TitleTXT"
         android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="64sp"
         android:layout_marginTop="50dp"
         android:text="IMC"
-        android:textColor="@color/verde_700"
-        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="50sp" />
+        android:textColor="@color/verde_700"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/PesoEDT"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/TitleTXT"
-        android:layout_marginTop="36sp"
-        android:layout_marginHorizontal="64sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginHorizontal="64sp"
+        android:layout_marginTop="36sp"
+        android:hint="@string/peso_ex_70_5"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
         android:textColor="@color/verde_700"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:inputType="numberDecimal"
-        android:hint="@string/peso_ex_70_5" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TitleTXT"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/AlturaEDT"
-        android:layout_below="@id/PesoEDT"
-        android:layout_marginTop="50sp"
         android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_marginHorizontal="64sp"
+        android:layout_marginTop="50sp"
         android:hint="@string/altura_ex_1_75"
         android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="@color/verde_700"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/PesoEDT" />
 
     <Button
         android:id="@+id/calcularBTN"
-        android:layout_below="@id/AlturaEDT"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80sp"
-        android:layout_marginHorizontal="64sp"
         android:layout_width="240sp"
         android:layout_height="50sp"
+        android:layout_marginHorizontal="64sp"
+        android:layout_marginTop="80sp"
+        android:text="Calcular "
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:text="Calcular " />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/AlturaEDT" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
